--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
@@ -47,17 +47,7 @@
 
                     <h:link><i class="fa fa-clone fa-lg"/></h:link>
 
-                    <h:commandLink action="#{ProzesskopieForm.prepare(item.id)}" id="action22"
-                                   title="#{item.containsUnreachableSteps?msgs.prozessvorlageMitUnvollstaendigenSchrittdetails:msgs.eineKopieDieserProzessvorlageAnlegen}">
-                        <h:outputText><i class="fa fa-inbox fa-lg"/></h:outputText>
-                    </h:commandLink>
-
-                    <i class="fa fa-clipboard fa-lg"/>
-
-                    <h:commandLink action="#{MassImportForm.prepare(item.id)}" id="massImport"
-                                   title="#{item.containsUnreachableSteps?msgs.prozessvorlageMitUnvollstaendigenSchrittdetails:msgs.eineKopieDieserProzessvorlageAnlegen}">
-                        <h:outputText><i class="fa fa-hourglass fa-lg"/></h:outputText>
-                    </h:commandLink>
+                    <h:link><i class="fa fa-clipboard fa-lg"/></h:link>
                 </h:form>
             </h:outputText>
         </p:column>
@@ -68,14 +58,30 @@
                     <h:outputText value="#{msgs.workflow}:"/>
                     <h:outputText value="#{item.workflow.title}"/>
 
-                    <h:outputText value="#{msgs.project}:"/>
-                    <h:outputText value="#{item.project.title}"/>
-
                     <h:outputText value="#{msgs.docket}:"/>
                     <h:outputText value="#{item.docket.title}"/>
 
                     <h:outputText value="#{msgs.ruleset}:"/>
                     <h:outputText value="#{item.ruleset.title}"/>
+
+                    <h:outputText value="#{msgs.project}:"/>
+                    <h:form id="createProcessForm">
+                            <p:panelGrid columns="2" columnClasses="label, actionsColumn" id="templateActionDetailTable">
+                                <h:outputText value="#{item.project.title} "/>
+
+                                <h:outputText rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobalOrForAnyClient('editProcess')}">
+                                    <h:commandLink action="#{ProzesskopieForm.prepare(item.id,item.project.id)}" id="createProcess"
+                                                   title="#{item.canBeUsedForProcess?msgs.createProcessFromTemplate:msgs.templateNotAvailableForProcess}">
+                                        <h:outputText><i class="fa fa-inbox fa-lg"/></h:outputText>
+                                    </h:commandLink>
+
+                                    <h:commandLink action="#{MassImportForm.prepare(item.id,item.project.id)}" id="createMassProcess"
+                                                   title="#{msgs.massImport}: #{item.canBeUsedForProcess?msgs.createProcessFromTemplate:msgs.templateNotAvailableForProcess}">
+                                        <h:outputText><i class="fa fa-hourglass fa-lg"/></h:outputText>
+                                    </h:commandLink>
+                                </h:outputText>
+                           </p:panelGrid>
+                    </h:form>
                 </p:panelGrid>
 
                 <o:graphicImage rendered="#{item.workflow ne null}" value="#{item.diagramImage}" dataURI="true" />
