Fix pagination button breaking the layout

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/pagination.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/pagination.xhtml
@@ -104,7 +104,7 @@
             <p:commandLink id="createPaginationButton"
                            action="#{Metadaten.createPagination}"
                            value="#{msgs.paginationRead}"
-                           update="metadataEditor"
+                           update="structureTreeForm,structureTreeForm:structureWrapperPanel,structureTreeForm:paginationWrapperPanel,metadataWrapperPanel,commentWrapperPanel,galleryWrapperPanel"
                            immediate="true"/>
             <p:commandButton id="okButton" value="OK"
                              action="#{Metadaten.setShowPagination(false)}"
