--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
@@ -52,7 +52,12 @@
                         <h:outputText><i class="fa fa-inbox fa-lg"/></h:outputText>
                     </h:commandLink>
 
-                    <h:link><i class="fa fa-clipboard fa-lg"/></h:link>
+                    <i class="fa fa-clipboard fa-lg"/>
+
+                    <h:commandLink action="#{MassImportForm.prepare(item.id)}" id="massImport"
+                                   title="#{item.containsUnreachableSteps?msgs.prozessvorlageMitUnvollstaendigenSchrittdetails:msgs.eineKopieDieserProzessvorlageAnlegen}">
+                        <h:outputText><i class="fa fa-hourglass fa-lg"/></h:outputText>
+                    </h:commandLink>
                 </h:form>
             </h:outputText>
         </p:column>
