--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditClientsPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditClientsPopup.xhtml
@@ -19,12 +19,14 @@
         <h:body>
             <!-- edit dialog -->
             <p:dialog widgetVar="addClientDialog"
+                      id="addClientDialog"
                       header="#{msgs.clientAdd}"
                       width="700px"
                       modal="true"
                       dynamic="true">
                 <h:form id="userClientForm">
                     <p:dataTable var="client"
+                                 id="selectClientTable"
                                  value="#{ClientForm.lazyDTOModel}"
                                  lazy="true"
                                  paginator="true"
